--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Font Awesome cdn css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and (min-width: 960px)" href="largedevice.css">
+    <link rel="stylesheet" media="screen and (max-width: 480px)" href="smalldevice.css">
     <title>To Do List</title>
 </head>
 <body>
@@ -22,6 +24,7 @@
         <input type="text" placeholder="enter your tasks " class="todo-input">
         <button class="todo-button" type="submit">
             <i class="fas fa-plus-circle fa-lg"></i>
+
         </button>
          <!--  <div class="select">
            <select name="todos" class="filter-todo">
